--- a/scipy2024/requirements.txt
+++ b/scipy2024/requirements.txt
@@ -1,3 +1,9 @@
+affine==2.4.0
+attrs==23.2.0
+certifi==2024.6.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 contourpy==1.2.1
 cycler==0.12.1
 fonttools==4.53.0
@@ -9,4 +15,6 @@ packaging==24.1
 pillow==10.3.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+rasterio==1.3.10
 six==1.16.0
+snuggs==1.4.7
